@@ -1,16 +1,16 @@
 package es.upm.miw.apaw.domain.services.warehouse;
 
+import es.upm.miw.apaw.domain.exceptions.NotFoundException;
 import es.upm.miw.apaw.domain.models.warehouse.Location;
-import es.upm.miw.apaw.domain.persistenceports.warehouse.LocationPersistence;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.test.context.ActiveProfiles;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 
 @SpringBootTest
 @ActiveProfiles("test")
@@ -19,22 +19,31 @@ class LocationServiceIT {
     @Autowired
     private LocationService locationService;
 
-    @Autowired
-    private LocationPersistence locationPersistence;
-
     @Test
     void testReadAll() {
-        List<Location> locations = this.locationService.readAll()
-                .collect(Collectors.toList());
-
-        assertThat(locations).isNotNull();
+        List<Location> locations = this.locationService.readAll().toList();
         assertThat(locations).isNotEmpty();
+        assertThat(locations.getFirst().getPosition()).isNotBlank();
+    }
 
-        assertThat(locations).hasSize(3);
+    @Test
+    void testReadByPositionExisting() {
+        Location location = this.locationService.readByPosition("A1");
+        assertThat(location.getPosition()).isEqualTo("A1");
+        assertThat(location.getCurrentStock()).isEqualTo(100);
+        assertThat(location.getAvailability()).isNotNull();
+        assertThat(location.getProductItems()).hasSize(2);
+    }
 
-        assertThat(locations)
-                .extracting(Location::getPosition)
-                .containsExactlyInAnyOrder("Z1-A", "Z2-C", "Y1-F");
+    @Test
+    void testReadByPositionNotFound() {
+        assertThrows(NotFoundException.class, () -> this.locationService.readByPosition("Z9"));
+    }
+
+    @Test
+    void testUpdateAvailability() {
+        Location location = this.locationService.updateAvailability("A1", false);
+        assertThat(location.getAvailability()).isFalse();
     }
 
 }
